# Board_of_announcements

./: .gitignore  README.md  dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
backend_compose/: .env  docker-compose.yaml  nginx.conf
frontend_react/: Dockerfile
market_postgres/: docker-compose.yaml
skymarket/ads/: filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
skymarket/ads/migrations/: 0001_initial.py  0002_alter_ad_description_alter_ad_title_and_more.py  0003_alter_ad_image.py  0004_alter_ad_author_alter_comment_ad_and_more.py  0005_alter_ad_options_alter_comment_options.py
skymarket/deploy/: .env.example
skymarket/skymarket/: settings.py  urls.py
skymarket/users/: email.py  managers.py  models.py  serializers.py  urls.py
skymarket/users/fixtures/: users.json
skymarket/users/migrations/: 0001_initial.py  0002_alter_user_first_name_alter_user_last_name.py  0003_alter_user_image.py
